# ParameterizedMotion

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install.sh  requirements.txt  run_cmake.sh
cmake_module/: FindBoost.cmake  FindPython3.cmake.bak  FindTinyXML2.cmake
data/character/: ground.xml  skel_mxm.xml
data/motion/: backflip_mxm.bvh  cartwheel_mxm.bvh  dodge_mxm.bvh  forward_jump_mxm.bvh  idle_mxm.bvh  jump_mxm.bvh  pivot_mxm.bvh  punch_mxm.bvh  push_mxm.bvh  sidekick_mxm.bvh  spinkick_mxm.bvh
network/: CMakeLists.txt  SimEnv.cpp  SimEnv.h  env_wrapper.py  network.py  ppo.py  regression.py  sampler.py  utils.py
network/output/jump_mxm/: network-0.index  network-rmax.index  results  rms-0  rms-rmax  settings
network/output/jump_mxm_parameterized/: network-0.index  network-rmax.index  reg_network-0.data-00000-of-00001  reg_network-0.index  results  rms-0  rms-rmax  settings
render/: CMakeLists.txt  Camera.cpp  Camera.h  DARTInterface.cpp  DARTInterface.h  GLFunctions.cpp  GLFunctions.h  MainWindow.cpp  MainWindow.h  MotionWidget.cpp  MotionWidget.h  main.cpp
sim/: BVHParser.cpp  BVHParser.h  CMakeLists.txt  Configurations.h  Controller.cpp  Controller.h  EliteSet.cpp  EliteSet.h  Functions.cpp  Functions.h  ParamTree.cpp  ParamTree.h  ReferenceManager.cpp  ReferenceManager.h  SkeletonBuilder.cpp  SkeletonBuilder.h
